<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">APITRAIN</string>
    <string name="welcome">welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="www_apitrain_co_uk">www.apitrain.com\n<a href="https://www.apitrain.co.uk/" /></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="txt_login_to_your_account">Login to your account</string>
    <string name="txt_email_hint">Email</string>
    <string name="txt_password_hint">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_domain_url">www.apitrain.co.uk</string>
    <string name="txt_ok">OK</string>
    <string name="txt_progress">My Progress</string>
    <string name="txt_exercises">Exercises</string>
    <string name="txt_circuits">Circuits</string>
    <string name="txt_workouts">Workouts</string>
    <string name="txt_training_plan">Training Plan</string>
    <string name="txt_training_logs">Training Logs</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_workout_stats">Workout Stats</string>
    <string name="txt_weight_kg">Weight(kg)</string>
    <string name="txt_weight_lb">Weight(lb)</string>
    <string name="txt_no_current_routine">No current trainingPlan</string>
    <string name="txt_all">All</string>
    <string name="txt_kilogram_kg">KILOGRAM(kg)</string>
    <string name="txt_pound_lb">POUND(lb)</string>
    <string name="error_message_network_unavailable">Internet connection is not available</string>
    <string name="error_message_required_email">Please enter email address</string>
    <string name="error_message_required_password">Please enter password</string>
    <string name="error_message_invalid_email">Please enter a valid email address</string>
    <string name="error_message_user_not_logged_in">User is not logged in</string>
    <string name="error_message_user_already_logged_in">User is already logged in</string>
    <string name="error_message_graph_not_loaded">Graph data is not loaded yet.</string>
    <string name="progress_message_login">Logging in, Please wait</string>
    <string name="progress_message_loading_graph_info">Loading results, Please wait</string>
    <string name="progress_message_loading_routines">Loading plan, Please wait</string>
    <string name="txt_please_wait">Please Wait...</string>
    <string name="txt_goal">Goal:</string>
    <string name="txt_days_trained">Days Trained:</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="navigation_drawer_open" tools:ignore="ExtraTranslation">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="txt_show_characters">Show \nCharacters</string>
    <string name="txt_current_routine">Current Training Plan:</string>
    <string name="txt_progress_stats">Progress Stats</string>
    <string name="txt_label_goal">Goal:</string>
    <string name="txt_current_weight">Current Weight:</string>
    <string name="txt_current_bmi">Current BMI:</string>
    <string name="txt_about">About</string>
    <string name="txt_training_log">Training Log</string>
    <string name="txt_search">Search</string>
    <string name="txt_view_training_plan">View Training Plan</string>
    <string name="txt_number_of_training_days">Number of training days:</string>
    <string name="txt_sort">Sort:</string>
    <string name="progress_messsage_loading_workouts">Loading workouts, Please wait</string>
    <string name="progress_messsage_loading_circuits">Loading circuits, Please wait</string>
    <string name="progress_messsage_loading_exercises">Loading exercises, Please wait</string>
    <string name="progress_message_loading_training_logs">Loading training logs, Please wait</string>
    <string name="progress_message_loading_clientlist">Loading client list, Please wait</string>
    <string name="txt_name">Name</string>
    <string name="txt_category">Category</string>
    <string name="title_activity_exercise_detail">View Exercise</string>
    <string name="title_activity_circuit_detail">View Circuit</string>
    <string name="title_activity_workout_detail">View Workout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="txt_weight_unit">Weight Unit:</string>
    <string name="title_activity_profile">View Profile</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_save_profile">Save Profile</string>
    <string name="error_message_permission_denied">Please allow permission from settings</string>
    <string name="error_message_gallery_permission">Please allow permission to access storage</string>
    <string name="message_sync_status_uptodate">Nothing to sync!</string>
    <string name="message_sync_status_started">Syncing to wear..</string>
    <string name="update_Password">Update Password</string>
    <string name="update">Update</string>
    <string name="txt_update_password">Update Password</string>
    <string name="txt_current_password_hint">Current Password</string>
    <string name="txt_new_password_hint">New Password</string>
    <string name="txt_confirm_new_password_hint">Confirm New Password</string>
    <string name="txt_Dedication">Dedication:</string>
    <string name="txt_Sync_Process">Sync Process: </string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_name_hint">Name</string>
    <string name="txt_surname_hint">Surname</string>
    <string name="txt_confirm_password_hint">Confirm Password</string>
    <string name="txt_client_list">Client List</string>
    <string name="txt_training_plan_list">Training Plan List</string>
    <string name="txt_training_aid">Training Aid</string>
    <string name="txt_forgot_your_password">Forgot Your Password?</string>
    <string name="txt_Forgot_password">Forgot Password</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_update">Update</string>
    <string name="txt_Add_Client">Add Client</string>
    <string name="txt_dob">Date of birth</string>
    <string name="txt_height_hint">Height (CM)</string>
    <string name="txt_weight_hint">Weight (KG)</string>
    <string name="txt_telephone_hint">Telephone</string>
    <string name="txt_fitness_goal_hint">Fitness Goal</string>
    <string name="txt_weight_goal_hint">Weight Goal (KG)</string>
    <string name="txt_target_date_hint">Target Date</string>
    <string name="txt_delete_Client">Delete Client</string>
    <string name="progress_message_loading_fitness_goal">Loading Fitness goal list, Please wait</string>
    <string name="txt_number_of_training_weeks">Number of training weeks: </string>
    <string name="txt_start_membership_date">Start Membership date : </string>
    <string name="txt_current_membership">Current Membership : </string>
    <string name="txt_period">Period : </string>
    <string name="txt_membership_untill">Membership untill : </string>
    <string name="txt_clients">Clients :</string>
    <string name="txt_moredetail_to_achieve_fitnessgoal">A couple of more details to achieve your fitness goal</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_how_tall_are_you">How tall are you?</string>
    <string name="txt_height_ft_hint">Height (FT)</string>
    <string name="txt_height_in_hint">Height (IN)</string>
    <string name="txt_what_is_your_weight">What is your weight?</string>
    <string name="txt_what_is_your_fitness_goal">What is your fitness goal?</string>
    <string name="txt_by_when">by When?</string>
    <string name="txt_would_you_like_apitrain">Would you like ApiTrain to help you with a specific training plan?</string>
    <string name="yes_please">Yes, Please.</string>
    <string name="txt_no_thanks">No, thanks, I will create my own</string>
    <string name="txt_goal_date">Target Date</string>
    <string name="txt_you_are_all_set">You are all set!</string>
    <string name="txt_remember_use_wear">And remember you can use APITRAIN in your smartwatch or any other portable device to guide you through your workouts and to monitor your progress.</string>
    <string name="txt_close">Close</string>
    <string name="txt_now_start">Now you can create your personalised training and food plans.</string>
    <string name="txt_now_start_your_workout">You can now start training using APITRAIN on your smartwatch or on any portable device.</string>
    <string name="txt_your_training_plan_is">Your training plan is:</string>
    <string name="error_message_required_mobile">Please enter phone number.</string>
    <string name="txt_neck_hint">Neck (cm)</string>
    <string name="txt_chest_hint">Chest (cm)</string>
    <string name="txt_upperarms_hint">Upper arms (cm)</string>
    <string name="txt_forearms_hint">Fore arms (cm)</string>
    <string name="txt_thighs_hint">Thighs (cm)</string>
    <string name="txt_calves_hint">Calves (cm)</string>
    <string name="txt_waist_hint">Waist (cm)</string>
    <string name="txt_chestskinfold_hint">Chest skin fold (mm)</string>
    <string name="txt_subscapular_skin_hint">Subscapular skin fold (mm)</string>
    <string name="txt_midaxilary_hint">Midaxilary skin fold (mm)</string>
    <string name="txt_tricap_skin_hint">Tricap skin fold (mm)</string>
    <string name="txt_belly_skin_hint">Belly skin fold (mm)</string>
    <string name="txt_hip_skin_hint">Hip skin (mm)</string>
    <string name="txt_thigh_skin_hint">Thigh skin fold (mm)</string>
    <string name="txt_add_calculate">Add and Calculate</string>
    <string name="txt_food_list">Food Plan</string>
    <string name="weekly_goals">Weekly Goals</string>
    <string name="progress_message_loading_foodlist">Loading food list, Please wait</string>
    <string-array name="feedbacks">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string name="txt_live_workouts">Live workout</string>
    <string name="days_trained">Days Trained:</string>
    <string name="txt_profile_setup">Profile Setup</string>
    <string name="txt_questionaire_dummytext1">Tell us a bit about yourself</string>
    <string name="txt_questionaire_dummytext2">Choose Gender</string>
    <string name="txt_questionaire_dummytext3">Date of Birth</string>
    <string name="txt_questionaire_dummytext4"><b>Note:</b>Gender and age are to calculate your Body Max index (BMI),body fat percentage,effort zones and calories burnt.</string>
    <string name="txt_questionaire_dummytext5">Weight</string>
    <string name="txt_questionaire_dummytext6">Height</string>
    <string name="txt_questionaire_dummytext7">Fitness Goal</string>
    <string name="txt_questionaire_dummytext8"><b>Note:</b>You can change your training plan anytime</string>
    <string name="action_help_feedback">Help &amp; Feedback</string>
    <string name="action_rateus">Rate Us</string>
    <string name="txt_forgotpass1">Forgot your password?</string>
    <string name="txt_enteremail">Enter below your email and we will\nsend you a new one</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
</resources>