<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:fillViewport="true"
    android:nestedScrollingEnabled="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/loginBackButton"
            android:layout_marginTop="30dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/ic_custom_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/loginBackButton"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            tools:context=".views.screens.activities.LoginActivity">

            <TextView
                android:id="@+id/tv_welcomeback"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mavenproblack"
                android:text="UPDATE \nPASSWORD"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/tv_forgotpassword"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgotpassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_current_password_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_new_password_hint"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/et_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_confirm_new_password_hint"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_update"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/mavenprobold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/txt_update"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>