<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    android:windowTranslucentStatus="true">

    <ImageButton
        android:id="@+id/loginBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_custom_back"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcomeback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcomeback"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/mavenproblack"
        android:text="Forgot password?"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/tv_forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/mavenproblack"
        android:text=""
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_enteremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_welcomeback"
        android:fontFamily="@font/mavenprobold"
        android:text="@string/txt_enteremail"
        android:textColor="@color/grey_text"
        android:textSize="16sp"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/tv_enteremail"
        android:layout_marginTop="60dp"
        android:theme="@style/TextLabel">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/mavenproblack"
        android:text="@string/txt_submit"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>